--- a/app/src/main/res/layout/activity_profile_chooser.xml
+++ b/app/src/main/res/layout/activity_profile_chooser.xml
@@ -9,10 +9,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:alignItems="center"
-        app:flexDirection="row"
         android:layout_marginTop="24dp"
         android:paddingHorizontal="24dp"
+        app:alignItems="center"
+        app:flexDirection="row"
         app:justifyContent="center">
 
         <TextView
@@ -26,13 +26,14 @@
             android:textSize="20sp" />
 
         <ImageView
+            android:id="@+id/editModeButton"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/button_ripple"
             android:clickable="true"
             android:focusable="true"
-            android:background="@drawable/button_ripple"
             android:src="@drawable/pencil" />
     </RelativeLayout>
 
@@ -53,10 +54,10 @@
 
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/profileAddButton"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/button_ripple"
                 android:clickable="true"
                 android:focusable="true"
@@ -64,10 +65,16 @@
                 app:flexDirection="column"
                 app:justifyContent="center">
 
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/plus" />
+                <RelativeLayout
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/media_card">
+                    <ImageView
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/plus" />
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
