--- a/app/src/main/res/layout/fragment_profile_history_media.xml
+++ b/app/src/main/res/layout/fragment_profile_history_media.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_profile_history_media"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="12dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv_profile_history_media"
         android:layout_width="wrap_content"
-        android:background="@drawable/media_card"
-        android:layout_height="200dp" />
+        android:layout_height="200dp"
+        android:background="@drawable/media_card" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:justifyContent="center"
-        app:flexDirection="column"
         android:layout_marginStart="24dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:flexDirection="column"
+        app:justifyContent="center">
 
         <TextView
             android:id="@+id/tv_profile_history_media_title"
