--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
@@ -22,7 +23,9 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables">
+            tools:ignore="UseCompoundDrawables"
+
+            >
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -45,5 +48,44 @@
             android:src="@drawable/search"
             app:tint="@color/white" />
     </com.google.android.flexbox.FlexboxLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="100dp"
+        android:visibility="gone"
+        >
+         <ImageView
+             android:layout_width="200dp"
+             android:layout_height="200dp"
+             android:layout_gravity="center"
+             android:src="@drawable/bookmark_x"
+             app:tint="@color/secondary"
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/Liste_Vide_Titre"
+            android:textColor="@color/primary"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginTop="24dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ListeVide"
+
+            android:layout_marginTop="8dp"
+            android:paddingHorizontal="24dp"
+            android:textAlignment="center"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
