--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/Liste_Vide_Titre"
+            android:text="@string/empty_list_title"
             android:textColor="@color/primary"
             android:textStyle="bold"
             android:textSize="20sp"
@@ -79,7 +79,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ListeVide"
+            android:text="@string/empty_list_subtitle"
 
             android:layout_marginTop="8dp"
             android:paddingHorizontal="24dp"
