--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -6,6 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/primary"
-    android:gravity="center"
     android:ellipsize="marquee"
-    android:textAlignment="inherit"/>
+    android:textAlignment="center"/>
