feat(series): add episodes play

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:background="@color/background"
+    android:orientation="vertical">
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
@@ -22,10 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables"
-
-            >
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -55,36 +51,32 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="100dp"
-        android:visibility="gone"
-        >
-         <ImageView
-             android:layout_width="200dp"
-             android:layout_height="200dp"
-             android:layout_gravity="center"
-             android:src="@drawable/bookmark_x"
-             app:tint="@color/secondary"
-        />
+        android:visibility="visible">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/bookmark_x"
+            app:tint="@color/secondary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="24dp"
             android:text="@string/empty_list_title"
             android:textColor="@color/primary"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_marginTop="24dp"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty_list_subtitle"
-
             android:layout_marginTop="8dp"
+
             android:paddingHorizontal="24dp"
-            android:textAlignment="center"
-            />
+            android:text="@string/empty_list_subtitle"
+            android:textAlignment="center" />
     </LinearLayout>
 
 
