--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -56,7 +56,7 @@
                 android:paddingHorizontal="24dp"
                 app:alignItems="center"
                 app:flexDirection="row"
-                app:justifyContent="space_between">
+                app:justifyContent="flex_start">
 
                 <TextView
                     android:id="@+id/mediaTitle"
@@ -66,12 +66,6 @@
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_flexGrow="1" />
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/bookmark_check"
-                    app:tint="@color/white" />
             </com.google.android.flexbox.FlexboxLayout>
 
             <com.google.android.flexbox.FlexboxLayout
