--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,11 @@
 
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
+        <!-- <item name="android:background">@color/background</item> -->
+
     </style>
+
+    <style name="Theme.FlixHub" parent="Base.Theme.Flixhub" />
 
     <style name="Button.Secondary" parent="Base.Theme.Flixhub">
         <item name="colorPrimary">@color/secondary</item>
