--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -4,6 +4,7 @@
     android:id="@+id/discoverContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:layout_above="@+id/bottom_nav"
     android:orientation="vertical">
 
