--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -7,19 +7,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_width="64dp"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:id="@+id/searchResultImage"
         />
 
-    <LinearLayout
+    <com.google.android.flexbox.FlexboxLayout
         android:layout_width="0dp"
         app:layout_flexGrow="1"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:paddingVertical="12dp"
-        android:orientation="vertical"
+        app:flexDirection="column"
+        app:alignItems="center"
         >
         <TextView
             android:layout_width="match_parent"
@@ -27,6 +28,8 @@
             android:id="@+id/searchResultTitle"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:maxLines="2"
+            android:ellipsize="end"
             />
         <TextView
             android:layout_width="match_parent"
@@ -35,6 +38,6 @@
             android:textColor="@color/hint"
             android:textSize="14sp"
             />
-    </LinearLayout>
+    </com.google.android.flexbox.FlexboxLayout>
 
 </com.google.android.flexbox.FlexboxLayout>
